fix: Squash stuck chord bug
The bug was due to randIndex only being calculated when the component
re-rendered. This sometimes forced randIndex to keep the same value

Maybe could be solved more elegantly with useEffect but after trying,
the best solution seemed to be calculating randIndex on button click

--- a/src/components/ChordVisualizer/ChordVisualizer.scss
+++ b/src/components/ChordVisualizer/ChordVisualizer.scss
@@ -44,5 +44,6 @@
 }
 
 svg {
-    height: 400px;
+    height: 100px;
+    margin-bottom: 2em;
 }
